# hadsync

./: .gitignore  .hadsync.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  hadsync_design.docx  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ha-dashboards/: .gitignore
ha-dashboards/3d-printer/: lovelace.yaml
ha-dashboards/battery-status/: lovelace.yaml
ha-dashboards/climate-overview/: lovelace.yaml
ha-dashboards/dashboard-actionable/: lovelace.yaml
ha-dashboards/dashboard-alerts/: lovelace.yaml
ha-dashboards/dashboard-fermenter/: lovelace.yaml
ha-dashboards/dashboard-presence/: lovelace.yaml
ha-dashboards/dashboard-security/: lovelace.yaml
ha-dashboards/lovelace-actional/: lovelace.yaml
ha-dashboards/lovelace-cameras/: lovelace.yaml
ha-dashboards/lovelace-system/: lovelace.yaml
ha-dashboards/lovelace-temperature/: lovelace.yaml
ha-dashboards/scene-launcher/: lovelace.yaml
hadsync/: __init__.py  cli.py  config.py  converter.py  entities.py  ha_rest.py  ha_ws.py  output.py  schema.py  state.py  validator.py  watcher.py
scripts/: release.py
tests/unit/: test_cli.py  test_config.py  test_converter.py  test_entities.py  test_local_modified.py  test_schema.py  test_state.py  test_validator.py
vscode-hadsync/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
vscode-hadsync/src/: commands.ts  completion.ts  diagnostics.ts  extension.ts  runner.ts  statusBar.ts
