[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadsync"
version = "0.1.0"
description = "Home Assistant Dashboard Sync — pull, edit, and push Lovelace dashboards as code"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "ruamel.yaml>=0.18",
    "websockets>=12",
    "httpx>=0.27",
    "pydantic>=2",
    "watchdog>=4",
]

[project.scripts]
hadsync = "hadsync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3",
    "coverage>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["hadsync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hadsync"]
branch = true
