[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadsync"
version = "0.2.5"
description = "Home Assistant Dashboard Sync — pull, edit, and push Lovelace dashboards as code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gevorg Gevorgyan", email = "gevgev66@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "home-assistant",
    "lovelace",
    "dashboard",
    "yaml",
    "cli",
    "home-automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "ruamel.yaml>=0.18",
    "websockets>=12",
    "httpx>=0.27",
    "pydantic>=2",
    "watchdog>=4",
]

[project.urls]
Homepage = "https://github.com/gevgev/hadsync"
Repository = "https://github.com/gevgev/hadsync"
"Bug Tracker" = "https://github.com/gevgev/hadsync/issues"
Changelog = "https://github.com/gevgev/hadsync/blob/main/CHANGELOG.md"

[project.scripts]
hadsync = "hadsync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3",
    "coverage>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["hadsync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hadsync"]
branch = true
